--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1"
   },
-  "homepage": "https://ElisePitre.github.io/elise-pitre-co-op-portfolio",
+  "homepage": "https://ElisePitre.github.io",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -39,6 +39,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "gh-pages": "^6.3.0",
+    "http-server": "^14.1.1"
   }
 }
