--- a/package.json
+++ b/package.json
@@ -20,6 +20,15 @@
   "author": "Elise Pitre",
   "license": "MIT",
   "dependencies": {
+    "@fontsource-variable/nabla": "^5.2.9",
+    "@fontsource/bubblegum-sans": "^5.2.8",
+    "@fontsource/bungee-shade": "^5.2.7",
+    "@fontsource/hachi-maru-pop": "^5.2.8",
+    "@fontsource/meddon": "^5.2.8",
+    "@fontsource/press-start-2p": "^5.2.7",
+    "@fontsource/shrikhand": "^5.2.8",
+    "@fontsource/sigmar-one": "^5.2.8",
+    "@fontsource/space-grotesk": "^5.2.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^5.3.4",
